--- a/Rapport 5/references.bib
+++ b/Rapport 5/references.bib
@@ -20,6 +20,16 @@
     date = {2001}
 }
 
+@book{griffiths,
+    edition = {2},
+    title = {Introduction to Quantum Mechanics},
+    isbn = {978-1107179868},
+    pagetotal = {468},
+    publisher = {Cambridge University Press},
+    author = {Griffiths, D. J},
+    date = {2017}
+}
+
 @misc{_shell_????,
     title = {Shell Tellus S2 M 68 Technical Data Sheet},
     url = {http://www.ktstrade.com.my/products/shell/technicaldata/0043.pdf},
@@ -72,4 +82,28 @@ efficiency of your hydraulic power system.},
     year = "2018",
     url = "https://en.wikipedia.org/w/index.php?title=Standard_gravity&oldid=832362254",
     note = "[Online; accessed 30-April-2018]"
+  }
+
+  @misc{ wiki:debroglie,
+    author = "{Wikipedia contributors}",
+    title = "Matter wave --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2018",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Matter_wave&oldid=830205957}",
+    note = "[Online; accessed 14-May-2018]"
+  }
+
+@misc{ wiki:energy_momentum,
+    author = "{Wikipedia contributors}",
+    title = "Energy–momentum relation --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2018",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Energy%E2%80%93momentum_relation&oldid=839578451}",
+    note = "[Online; accessed 14-May-2018]"
+  }
+
+  @misc{ zeeman_vedlegg,
+    author = "{C. A Lütken}, {A. L. Read}",
+    title = "FYS2150/V18/Modul 3.2: {Zeeman-effekten}//revidert 23.04.18",
+    year = "2018",
+    howpublished = "\url{http://www.uio.no/studier/emner/matnat/fys/FYS2150/v18/kursmateriell/bolgeoptikk/fys2150-3_2-zeeman_vedlegg.pdf}",
+    note = "[Online; accessed 14-May-2018]"
   }
